traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
var cpt:Int=0;
^TraversalDiagonal:1: error: expected class or object definition
var cpt:Int=0;
^TraversalDiagonal:2: error: expected class or object definition
var x:Int=0
^TraversalDiagonal:3: error: expected class or object definition
var y:Int=0
^TraversalDiagonal:4: error: expected class or object definition
var i:Int=0
^TraversalDiagonal:5: error: expected class or object definition
x=getX()
^TraversalDiagonal:6: error: expected class or object definition
y=getY()
^TraversalDiagonal:7: error: expected start of definition
override def run() {
         ^